add TemplateDriven Form to ShoppingListEdit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<app-header (selecteFeature) = "onNavigate($event)"></app-header>
+<app-header ></app-header> <!-- (selecteFeature) = "onNavigate($event)" not needed if you use routes-->
 <div class="container">
   <div class="row">
     <div class="col-md-12">
